Add typing support to the tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,6 +31,7 @@
    "source": [
     "import os\n",
     "os.environ[\"INTEGER_LIST\"] = \"[1, 2, 3, 4, 5]\"\n",
+    "os.environ[\"DICTIONARY\"] = \"{'key': 'value'}\"\n",
     "os.environ[\"INTEGER\"] = \"42\"\n",
     "os.environ[\"BOOLEAN\"] = \"False\"\n",
     "os.environ[\"OVERRIDE_DEFAULT\"] = \"This is NOT the default value\""
@@ -45,8 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import ecological\n",
@@ -54,6 +57,7 @@
     "class Configuration(ecological.AutoConfig):\n",
     "    integer_list: list\n",
     "    integer: int\n",
+    "    dictionary: dict\n",
     "    boolean: bool\n",
     "    with_default: str = \"This is the default value\"\n",
     "    override_default: str = \"This is the default value\""
@@ -69,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +111,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key': 'value'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(Configuration.dictionary))\n",
+    "print(type(Configuration.dictionary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,6 +191,87 @@
    "source": [
     "As you can see all the values where cast from `str` to the expected types, and if a default value is set it will be used if the corresponding environment variable doesn't exist."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Typing Support"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ecological** also supports some of the types defined in [PEP 484](https://www.python.org/dev/peps/pep-0484/), for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Dict\n",
+    "\n",
+    "class ConfigurationTyping(ecological.AutoConfig):\n",
+    "    integer_list: List\n",
+    "    dictionary: Dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected the variables were converted to the real types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationTyping.integer_list))\n",
+    "print(type(ConfigurationTyping.integer_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key': 'value'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationTyping.dictionary))\n",
+    "print(type(ConfigurationTyping.dictionary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -190,5 +294,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
