Add prefixed configuration to tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -209,7 +209,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from typing import List, Dict\n",
@@ -262,6 +264,79 @@
    "source": [
     "print(repr(ConfigurationTyping.dictionary))\n",
     "print(type(ConfigurationTyping.dictionary))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Prefixed Configuration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also decide to prefix your application configuration, for example, to avoid collisions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"HOME\"] = \"/home/myuser/\"\n",
+    "os.environ[\"VALUE\"] = \"Not Prefixed\"\n",
+    "os.environ[\"CONFIG_HOME\"] = \"/app/home\"\n",
+    "os.environ[\"CONFIG_VALUE\"] = \"Prefixed\"\n",
+    "\n",
+    "class ConfigurationPrefix(ecological.AutoConfig, prefix=\"config\"):\n",
+    "    home: str\n",
+    "    value: str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case the `home` and `value` properties will be fetched from the `CONFIG_HOME` and `CONFIG_VALUE` environment properties:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'/app/home'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationPrefix.home))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Prefixed'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationPrefix.value))"
    ]
   },
   {
