Add Variables and Nested Configuration to the tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -11,19 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting Started"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Getting Started\n",
+    "\n",
     "Before we start to set some environment variables, note than in a real application this would be set outside of your application."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -196,19 +191,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Typing Support"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Typing Support\n",
+    "\n",
     "**Ecological** also supports some of the types defined in [PEP 484](https://www.python.org/dev/peps/pep-0484/), for example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -272,20 +262,17 @@
     "collapsed": true
    },
    "source": [
-    "## Prefixed Configuration"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Prefixed Configuration\n",
+    "\n",
     "You can also decide to prefix your application configuration, for example, to avoid collisions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.environ[\"HOME\"] = \"/home/myuser/\"\n",
@@ -307,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -340,13 +327,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fine-grained control\n",
+    "\n",
+    "You can control how the configuration properties are set by providing a ecological.Variable instance as the default value.\n",
+    "\n",
+    "`ecological.Variable` receives the following parameters:\n",
+    "\n",
+    "`variable_name` (mandatory) - exact name of the environment variable that will be used.\n",
+    "`default` (optional) - default value for the property if it isn't set.\n",
+    "`transform` (optional) - function that converts the string in the environment to the value and type you expect in your application. The default `transform` function will try to cast the string to the annotation type of the property.\n",
+    "\n",
+    "### Transformation function\n",
+    "\n",
+    "The transformation function receive two parameters, a string representation with the raw value, and a wanted_type with the value of the annotation (usually, but not necessarily a type)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.environ[\"Integer\"] = \"42\"\n",
+    "\n",
+    "def times_2(value, wanted_type):\n",
+    "    assert wanted_type is int\n",
+    "    return int(value) * 2\n",
+    "\n",
+    "class ConfigurationVariable(ecological.AutoConfig, prefix=\"this_is_going_to_be_ignored\"):\n",
+    "    integer = ecological.Variable(\"Integer\", transform=lambda v, wt: int(v))\n",
+    "    integer_x2: int = ecological.Variable(\"Integer\", transform=times_2)\n",
+    "    integer_as_str: str = ecological.Variable(\"Integer\", transform=lambda v, wt: v)\n",
+    "    boolean: bool = ecological.Variable(\"404\", default=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`integer`, `integer_x2` and `integer_as_str` will use the same enviroment variable but return different values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationVariable.integer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationVariable.integer_x2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'42'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationVariable.integer_as_str))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the environment variable `404` is not set, `boolean` will have the default value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationVariable.boolean))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nested Configuration\n",
+    "\n",
+    "`Ecological.AutoConfig` also supports nested configurations, for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"INTEGER\"] = \"42\"\n",
+    "os.environ[\"NESTED_BOOLEAN\"] = \"True\"\n",
+    "\n",
+    "class ConfigurationNested(ecological.AutoConfig):\n",
+    "    integer: int\n",
+    "\n",
+    "    class Nested(ecological.AutoConfig, prefix='nested'):\n",
+    "        boolean: bool"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This allows you to logically structure your application's configuration in sections:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationNested.integer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(ConfigurationNested.Nested.boolean))"
+   ]
   }
  ],
  "metadata": {
