Include tutorial in the README

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ecological Tutorial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Ecological Tutorial\n",
+    "\n",
     "## Getting Started\n",
     "\n",
     "Before we start to set some environment variables, note than in a real application this would be set outside of your application."
@@ -348,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.environ[\"Integer\"] = \"42\"\n",
@@ -458,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.environ[\"INTEGER\"] = \"42\"\n",
@@ -475,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This allows you to logically structure your application's configuration in sections:"
+    "This way you can group related configuration properties hierarchically:"
    ]
   },
   {
