Tutorial more up to date

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "import ecological\n",
     "\n",
-    "class Configuration(ecological.AutoConfig):\n",
+    "class Configuration(ecological.Config):\n",
     "    integer_list: list\n",
     "    integer: int\n",
     "    dictionary: dict\n",
@@ -201,7 +201,7 @@
    "source": [
     "from typing import List, Dict\n",
     "\n",
-    "class ConfigurationTyping(ecological.AutoConfig):\n",
+    "class ConfigurationTyping(ecological.Config):\n",
     "    integer_list: List\n",
     "    dictionary: Dict"
    ]
@@ -275,7 +275,7 @@
     "os.environ[\"CONFIG_HOME\"] = \"/app/home\"\n",
     "os.environ[\"CONFIG_VALUE\"] = \"Prefixed\"\n",
     "\n",
-    "class ConfigurationPrefix(ecological.AutoConfig, prefix=\"config\"):\n",
+    "class ConfigurationPrefix(ecological.Config, prefix=\"config\"):\n",
     "    home: str\n",
     "    value: str"
    ]
@@ -331,7 +331,7 @@
     "\n",
     "`ecological.Variable` receives the following parameters:\n",
     "\n",
-    "`variable_name` (mandatory) - exact name of the environment variable that will be used.\n",
+    "`variable_name` (optional) - exact name of the environment variable that will be used.\n",
     "`default` (optional) - default value for the property if it isn't set.\n",
     "`transform` (optional) - function that converts the string in the environment to the value and type you expect in your application. The default `transform` function will try to cast the string to the annotation type of the property.\n",
     "\n",
@@ -354,7 +354,7 @@
     "    assert wanted_type is int\n",
     "    return int(value) * 2\n",
     "\n",
-    "class ConfigurationVariable(ecological.AutoConfig, prefix=\"this_is_going_to_be_ignored\"):\n",
+    "class ConfigurationVariable(ecological.Config, prefix=\"this_is_going_to_be_ignored\"):\n",
     "    integer = ecological.Variable(\"Integer\", transform=lambda v, wt: int(v))\n",
     "    integer_x2: int = ecological.Variable(\"Integer\", transform=times_2)\n",
     "    integer_as_str: str = ecological.Variable(\"Integer\", transform=lambda v, wt: v)\n",
@@ -449,7 +449,7 @@
    "source": [
     "## Nested Configuration\n",
     "\n",
-    "`Ecological.AutoConfig` also supports nested configurations, for example:"
+    "`ecological.Config` also supports nested configurations, for example:"
    ]
   },
   {
@@ -463,10 +463,10 @@
     "os.environ[\"INTEGER\"] = \"42\"\n",
     "os.environ[\"NESTED_BOOLEAN\"] = \"True\"\n",
     "\n",
-    "class ConfigurationNested(ecological.AutoConfig):\n",
+    "class ConfigurationNested(ecological.Config):\n",
     "    integer: int\n",
     "\n",
-    "    class Nested(ecological.AutoConfig, prefix='nested'):\n",
+    "    class Nested(ecological.Config, prefix='nested'):\n",
     "        boolean: bool"
    ]
   },
